fixed letter spacing

--- a/spotify-app/src/App.scss
+++ b/spotify-app/src/App.scss
@@ -265,6 +265,8 @@ flex-direction: column;
         font-size: 7rem;
         margin: 0;
         line-height: 1;
+        word-spacing: -18px;
+        letter-spacing: -6px;
       }
     }
 }
